fixed alignment issues on index and contact page

--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -53,7 +53,8 @@ a:hover {
 }
 
 #profile-pic {
-    margin: 3vw;
+    margin-top: 3vw;
+    margin-bottom: 3vw;
     width: 25vw;
 }
 #shout {
@@ -63,6 +64,7 @@ a:hover {
 }
 #contact {
     text-align: center;
+    word-wrap: break-word;
 }
 #icons {
     margin-bottom: 10px;
@@ -79,7 +81,8 @@ a:hover {
       height: 3vw;
   }
   #profile-pic {
-      width: 80vw;
+      width: 100%;
+      margin: auto;
   }  
   #shout {
       font-size: 10vw;
